--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "nodemon": "^3.0.1",
+    "pg": "^8.11.3",
+    "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1",
     "youtube-api": "^3.0.1"
   },
   "devDependencies": {
