--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["node", "express", "./custom"],
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
