--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nodemailer": "^6.4.9",
     "@types/uuid": "^9.0.2",
+    "bcrypt": "^5.1.1",
     "concurrently": "^8.2.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1",
+    "uuid": "^9.0.0",
     "youtube-api": "^3.0.1"
   },
   "devDependencies": {
