--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1",
     "uuid": "^9.0.0",
+    "youtube": "^0.1.0",
     "youtube-api": "^3.0.1"
   },
   "devDependencies": {
