--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/nodemailer": "^6.4.9",
     "@types/uuid": "^9.0.2",
+    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.1",
     "cookie-parser": "^1.4.6",
